src/App.css
.App {
  text-align: center;
}

.workSpace{
    background-color: #E1E1E1 ;
    width:100%;
    height:1024px;
}

.bg_navbar{
    width: 100%;
    height: 76px;
    font-family: Roboto-Regular;
    background: #4A90E2 ;
    font-size: 24px;
    color: #00408B;
    display: flex ;
    justify-content:space-evenly;
    align-items: center;
}
.navContainer{
    display: flex;
    max-width: 660px;
}

.bg_navbar .navContainer .filter{
    width: 160px ;
    height:76px;
    box-sizing: border-box;
    text-align: center;
    justify-content: center;
    padding: 24px 0px 24px 0px ;
    margin: 0 30px 0 30px;
}
.bg_navbar .filter:hover{
    border-bottom: #00408B 5px solid;
    color: #FFFFFF;
   
}
.input{
    display:flex;
    justify-content:center;
    align-items: center;
    flex-direction: column;
    margin: auto;
    width:60%;
    height:6%;
    font-family: Roboto-Regular;
    font-size: 24px;
    text-align : left;
}
::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
    color:#C8C8C8;}
.inputer{
    width:100%;
    height:100%;
    font-size: 24px;
    text-align: left;
    margin : 2% 0 2% 0 ;
    color:#000000;
    border-radius: 5px;
    border: 2px solid #C8C8C8;
}

.todoList{
    display:flex;
    justify-content:start;
    flex-direction: column;
    margin:auto;
    width:60%;
    height: 92.57%;
    font-family: Roboto-Regular;
    font-size: 24px;
    text-align: left;
    background-color: #E1E1E1;
}
.todoList .todoCheckbox #checkbox{
    height: 24px;
    width: 24px;
    margin-right:1.56%;
}
.todoCheckbox{
    width:96%;
    margin-left:3.125%;
    display:flex;
    justify-content:space-between;
    align-items: center;
}
.checkLabel{
    width:80%;
}

.checkbox{
    display:flex;
    justify-content: space-between;
    width:auto;

}
.todoCheckbox .checkbox{
    width:24%;
}
.todoData{
    margin-left:7%;

}
.todoBtn{
    display: flex;
    flex-direction:row-reverse;
    justify-content:space-between;
    width: 20%;


}
.todoItem{
    box-sizing: border-box;
    padding:1.56%;
    background-color: #F2F2F2;
    margin-bottom: 0.8%;

}
.checked_todoItem{
    box-sizing: border-box;
    background: #FFF2DC;
    margin-bottom: 0.78%;

}
.checkedTodoItem{
    background:#FFF2DC;
    box-sizing: border-box;
    padding: 1.56%;
    margin-bottom: 0.8%;
}

